# Disk-Sage

./: .gitignore  README.md  index.html  package-lock.json  package.json  run-tauri-dev.cmd  tailwind.config.js  vite.config.js
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: analyzer.rs  cleaner.rs  duplicates.rs  main.rs  recommender.rs  scanner.rs  temp_finder.rs
src/components/: Dashboard.tsx  DeleteModal.tsx  DuplicateView.tsx  FileList.tsx  FileScanner.tsx  Recommendations.tsx  SideNav.tsx  TempCleaner.tsx
src/hooks/: useScanner.ts
src/store/: useStore.ts
src/utils/: arrayUtils.ts  constants.ts  dateUtils.ts  errorHandling.ts  fileTypeDetection.ts  formatters.ts  mathUtils.ts  stringUtils.ts  validation.ts
